--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11123,7 +11123,7 @@ $nav-height:                    56px;
 /* Set theme color *************************/
 /* #b71c1c; */
 /************************************************************/
-.badge-notify { background: #7cb342 !important; }
+.badge-notify { background: #03a9f4 !important; }
 
 body { color: #3c4858; background-color: #fdfdfd; -webkit-text-size-adjust: 100%; }
 
