--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11134,7 +11134,7 @@ body { color: #3c4858; background-color: #fdfdfd; -webkit-text-size-adjust: 100%
 .navbar a { color: #3c4858 !important; }
 
 footer a { color: #fafafa; }
-footer a:hover { color: #7cb342; }
+footer a:hover { color: #03a9f4; }
 
 .title { font-family: "Roboto Slab", "Times New Roman", serif; }
 
