--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14084,7 +14084,7 @@ $nav-height:                    56px;
 /* Set theme color *************************/
 /* #b71c1c; */
 /************************************************************/
-.badge-notify { background: #7cb342 !important; }
+.badge-notify { background: #03a9f4 !important; }
 
 body { color: #3c4858; background-color: #fdfdfd; -webkit-text-size-adjust: 100%; }
 
@@ -14095,7 +14095,7 @@ body { color: #3c4858; background-color: #fdfdfd; -webkit-text-size-adjust: 100%
 .navbar a { color: #3c4858 !important; }
 
 footer a { color: #fafafa; }
-footer a:hover { color: #7cb342; }
+footer a:hover { color: #03a9f4; }
 
 .title { font-family: "Roboto Slab", "Times New Roman", serif; }
 
