--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3102,7 +3102,7 @@ a.text-dark:hover, a.text-dark:focus { color: #121416 !important; }
 
 .rgba-light-green-strong, .rgba-light-green-strong:after { background-color: rgba(139, 195, 74, 0.7); }
 
-.light-green.darken-1 { background-color: #7cb342 !important; }
+.light-green.darken-1 { background-color: #03a9f4 !important; }
 
 .light-green.darken-2 { background-color: #689f38 !important; }
 
@@ -5915,7 +5915,7 @@ ul.stepper li.active a .label, ul.stepper li.completed a .label { font-weight: 6
 
 .rgba-light-green-strong, .rgba-light-green-strong:after { background-color: rgba(139, 195, 74, 0.7); }
 
-.light-green.darken-1 { background-color: #7cb342 !important; }
+.light-green.darken-1 { background-color: #03a9f4 !important; }
 
 .light-green.darken-2 { background-color: #689f38 !important; }
 
@@ -8728,7 +8728,7 @@ ul.stepper li.active a .label, ul.stepper li.completed a .label { font-weight: 6
 
 .rgba-light-green-strong, .rgba-light-green-strong:after { background-color: rgba(139, 195, 74, 0.7); }
 
-.light-green.darken-1 { background-color: #7cb342 !important; }
+.light-green.darken-1 { background-color: #03a9f4 !important; }
 
 .light-green.darken-2 { background-color: #689f38 !important; }
 
@@ -11674,7 +11674,7 @@ a.project-card .github-icon .stars:hover, a.project-card .github-icon .stars:foc
 
 .rgba-light-green-strong, .rgba-light-green-strong:after { background-color: rgba(139, 195, 74, 0.7); }
 
-.light-green.darken-1 { background-color: #7cb342 !important; }
+.light-green.darken-1 { background-color: #03a9f4 !important; }
 
 .light-green.darken-2 { background-color: #689f38 !important; }
 
