--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11220,7 +11220,7 @@ progress { position: fixed; left: 0; top: 56px; z-index: 10; width: 100%; height
 /* Projects */
 .project-card { position: relative; width: 100%; min-height: 1px; padding-right: 15px; padding-left: 15px; flex: 0 0 100%; max-width: 100%; }
 
-/*@media (min-width: 576px) { .project-card { flex: 0 0 50%; max-width: 50%; } }*/
+@media (min-width: 576px) { .project-card { flex: 0 0 50%; max-width: 50%; } }
 @media (min-width: 768px) { .project-card { flex: 0 0 33.3333333333%; max-width: 33.3333333333%; } }
 
 /*@media (min-width: 768px) { .project-card { flex: 0 0 100%; max-width: 100%; } }*/
